--- a/club.html
+++ b/club.html
@@ -1,11 +1,105 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <title>Code fusion</title>
 </head>
 <body>
-    <p>Code Fusion</p>
+
+<style>
+  *{
+    text-decoration: none;
+  }
+  .navbar{
+    background: crimson; font-family: calibri; padding-right: 15px;padding-left: 15px;
+  }
+  .navdiv{
+    display: flex; align-items: center; justify-content: space-between;
+  }
+  .logo a{
+    font-size: 35px; font-weight: 600; color: white;
+  }
+  li{
+    list-style: none; display: inline-block;
+  }
+  li a{
+    color: white; font-size: 18px; font-weight: bold; margin-right: 25px;
+  }
+  button{
+    background-color: black; margin-left: 10px; border-radius: 10px; padding: 10px; width: 90px;
+  }
+  button a{
+    color: white; font-weight: bold; font-size: 15px;
+  }
+  .carousel-item {
+    height: 32rem;
+    background: #944010b4;
+    color: white;
+    position: relative;
+  }
+  .container {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding-bottom: 50px;
+  }
+</style>
+
+<nav class="navbar">
+  <div class="navdiv">
+    <div class="logo"><a href="#">Code Fusion</a> </div>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+      <button><a href="#">SignIn</a></button>
+      <button><a href="#">SignUp</a></button>
+    </ul>
+  </div>
+</nav>
+
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+  </ol>
+
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <div class="container">
+        <h1>CodeSpire</h1>
+        <p>Largest Coding Competition Organized by Acropolis Institute of technology and research......</p>
+        <a href="#" class="btn btn-lg btn-primary">Sign up today</a>
+      </div>
+    </div>
+
+    <div class="carousel-item">
+      <div class="container">
+        <h1>Appventure</h1>
+        <p>ACM organized Appventure in which they hires App developers for their upcoming project....</p>
+        <a href="#" class="btn btn-lg btn-primary">Sign up today</a>
+      </div>
+    </div>
+  </div>
+
+  <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
+
+
